# svg-sprite-sheet-generator

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  ROADMAP.md  deny.toml  release.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: check.sh  coverage.sh  dev_checks.sh  release.sh
src/: cli.rs  lib.rs  main.rs  svg.rs
src/error/: mod.rs
src/svg/: ids.rs  normalize.rs  parsing.rs  sanitize.rs  transform.rs
tests/: cli_integration.rs  completions_man.rs  main_integration.rs
