[package]
name = "svg_sheet"
version = "0.1.0"
authors = ["Gavin Daly"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
winnow = "0.5.37"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
proptest = "1.5"
